fix: colour contrast issues

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ li::after {
     
 }*/
 label.addTodoItem {
-   color: red;
+   color: black;
    font-weight: 600;
 }
 input.clearAllRecordsBtn,
